Some speed improvements
Do not perfom move validation at all when fullValidation is false in
Board.doMove
Make bitboard an attribute of square instead of storing it in an extra
array
Using long, int instead of Long, Integer (prevent objects creation)
Using arrays instead of EnumMap (prevent key class checking)
Remove events on Board (Seemed useless to me). I think it would be
better to have an extra class, like a "listeneable board".